Initial 1.20.4 port